--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,29 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;700&display=swap");
 
 * {
   box-sizing: border-box;
 }
 body {
   margin: 0;
-  font-family: 'Nunito', sans-serif;
+  font-family: "Nunito", sans-serif;
 }
-h1, h2, h3, ul, hr {
+h2,
+h3,
+ul,
+hr {
   margin-top: 0;
   margin-bottom: 0;
+  font-size: 20px;
+}
+h1 {
+  margin: 50px;
+  font-size: 40px;
 }
 ul {
   list-style: none;
   padding-left: 0;
 }
-input{
+input {
   outline: none;
   font-family: inherit;
 }
